--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="header-wrap">
         <div class="logo">
-          <img src="images/logo.png" alt="" /> <span>Hamburger</span>
+          <img src="/images/logo.png" alt="" /> <span>Hamburger</span>
         </div>
 
         <nav class="menu-box">
